--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "mongoose": "^5.9.6",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.0"
+  },
+  "engines": {
+    "node": "16.11.1"
   }
 }
